[gd_scene load_steps=8 format=1]

[ext_resource path="res://stage/hud/esc_menu/esc_menu.gd" type="Script" id=1]
[ext_resource path="res://stage/hud/esc_menu/esc_menu_panel.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/1943.fnt" type="BitmapFont" id=3]
[ext_resource path="res://stage/hud/esc_menu/esc_menu_resume.gd" type="Script" id=4]
[ext_resource path="res://stage/hud/esc_menu/esc_menu_quit.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]

resource/name = "HighlightResume"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimateResume/Resume:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]

resource/name = "HighlightQuit"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimateQuit/Quit:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ) ]
}

[node name="EscMenu" type="Container"]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]

visibility/self_opacity = 0.9
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 320.0
margin/bottom = 240.0
script/script = ExtResource( 2 )

[node name="AnimateResume" type="AnimationPlayer" parent="Panel"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/HighlightResume = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Resume" type="Label" parent="Panel/AnimateResume"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 115.0
margin/top = 70.0
margin/right = 211.0
margin/bottom = 86.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "resume"
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 4 )

[node name="AnimateQuit" type="AnimationPlayer" parent="Panel"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/HighlightQuit = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Quit" type="Label" parent="Panel/AnimateQuit"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 128.0
margin/top = 100.0
margin/right = 192.0
margin/bottom = 116.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "quit"
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 5 )

[connection signal="visibility_changed" from="." to="Panel" method="_on_EscMenu_visibility_changed"]

[connection signal="visibility_changed" from="." to="Panel/AnimateResume/Resume" method="_on_EscMenu_visibility_changed"]

[connection signal="visibility_changed" from="." to="Panel/AnimateQuit/Quit" method="_on_EscMenu_visibility_changed"]

[connection signal="input_event" from="Panel/AnimateResume/Resume" to="Panel/AnimateResume/Resume" method="_on_Resume_input_event"]

[connection signal="mouse_enter" from="Panel/AnimateResume/Resume" to="Panel/AnimateResume/Resume" method="_on_Resume_mouse_enter"]

[connection signal="mouse_exit" from="Panel/AnimateResume/Resume" to="Panel/AnimateResume/Resume" method="_on_Resume_mouse_exit"]

[connection signal="input_event" from="Panel/AnimateQuit/Quit" to="Panel/AnimateQuit/Quit" method="_on_Quit_input_event"]

[connection signal="mouse_enter" from="Panel/AnimateQuit/Quit" to="Panel/AnimateQuit/Quit" method="_on_Quit_mouse_enter"]

[connection signal="mouse_exit" from="Panel/AnimateQuit/Quit" to="Panel/AnimateQuit/Quit" method="_on_Quit_mouse_exit"]


